# OpenTAKServer

./: .env.dev  .gitignore  Dockerfile  FEDERATION_SETUP_GUIDE.md  MULTICAST.md  README.md  dev.sh  docker-compose.yaml  docker-compose.yml  pyproject.toml  test_udp_federation.py
.github/: dependabot.yml
.github/workflows/: docker.yml
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: deployment.yaml  ingressroute.yaml  pvc.yaml  secrets.yaml  service.yaml
opentakserver/: AtakOfTheCerts.py  EmailValidator.py  PasswordValidator.py  SocketServer.py  UsernameValidator.py  __init__.py  app.py  ca_config.cfg  ca_config.py  certificate_authority.py  client_handler.py  config.py  constants.py  datastore.py  defaultconfig.py  extensions.py  functions.py  logo.py  oidc.py  secret_key.example.py  sql_jobstore.py
opentakserver/blueprints/: api.py  casevac_api.py  cli.py  config.py  cot_api.py  data_package_api.py  datasync_api.py  datasync_blueprint.py  device_profile_api.py  marker_api.py  marti.py  marti_api.py  meshtastic_api.py  ots_socketio.py  package_api.py  scheduled_jobs.py  scheduler_api.py  updates_api.py
opentakserver/blueprints/federation/: __init__.py  federation_api.py  federation_helper.py  federation_service.py
opentakserver/blueprints/marti_api/: __init__.py  certificate_enrollment_api.py  citrap_api.py  contacts_marti_api.py  cot_marti_api.py  data_package_marti_api.py  datasync_marti_api.py  device_profile_marti_api.py  group_marti_api.py  marti_api.py  mission_marti_api.py  video_marti_api.py
opentakserver/blueprints/ots_api/: __init__.py  api.py  casevac_api.py  config_api.py  data_package_api.py  data_sync_api.py  device_profile_api.py  eud_stats_api.py  federation_api.py  group_api.py  health_api.py  language_api.py  ldap_api.py  marker_api.py  mediamtx_api.py  meshtastic_api.py  mission_api.py  oidc_api.py  package_api.py  plugin_api.py  scheduler_api.py  settings_api.py  tak_gov_link_api.py  token_api.py  user_api.py  video_api.py
opentakserver/controllers/: client_controller.py  cot_controller.py  meshtastic_controller.py  rabbitmq_client.py
opentakserver/cot_parser/: Dockerfile  cot_parser.py  device_info_parser.py  marker_parser.py  point_parser.py
opentakserver/eud_handler/: Dockerfile  Dockerfile-multicast  Dockerfile-ssl  EudHandler.py  EudHandlerSSL.py  EudServer.py  EudServerSSL.py  EudServerUdp.py  SocketServer.py  client_controller.py  eud_handler.py  eud_handler2.py  multicast_handler.py  multicast_sender.py  multicast_server.py
opentakserver/fed_client/: fed_client.py
opentakserver/forms/: FedTokenForm.py  FederationConnectionForm.py  Fields.py  MediaMTXGlobalConfig.py  MediaMTXPathConfig.py  Settings_Form.py  casevac_form.py  data_package_form.py  device_profile_form.py  marker_form.py  package_form.py  point_form.py  updates_form.py  zmist_form.py
opentakserver/health/: __init__.py  cot_parser.py  eud_handler.py
opentakserver/installer/: ubuntu_installer.sh
opentakserver/maps/: Google_Hybrid_Street_View.xml  Google_Street_View_Coverage.xml
opentakserver/migrations/: env.py
opentakserver/migrations/versions/: 00442761c803_added_mission_guid_to_missionrole_and_.py  00546817d518_added_uid_column_to_cot_table.py  03d6d2d961b1_update_for_groups_support.py  04d5dc15acab_added_packages_table.py  1041fae84708_added_eud_stats_table.py  109579c78637_update_for_group_support.py  14e268184cc5_added_mission_logs_table.py  21fb5a21f356_fixed_mission_changes_and_mission_uids_.py  298430e7849d_fixed_video_streams_table.py  2b1863a985a6_added_groups_missions_table.py  2b5bddd207ae_added_some_cascades.py  34d5df698b81_added_publish_time_to_packages_table.py  34dc96ee805b_changed_device_profile_table.py  35a075531973_updated_missionlogentry.py  3a7ea7ead17b_added_casevac_fields.py  414b87c32cc2_added_device_profile_and_package_tables.py  4c7909c34d4e_initial_migration.py  4f0173cdb93b_added_mission_change_id_column_to_.py  591a98184047_added_id_column_to_device_profiles.py  5d06227dea50_added_data_sync_tables.py  6032cd7bc998_backfill_token_max_uses.py  61c7cfea0c86_added_eud_uid_to_device_profiles_table_.py  654486d08787_update_for_groups_support.py  6665d030f187_added_last_meshtastic_publish_to_euds_.py  673883afccae_added_device_profile_table.py  (+30 more)
opentakserver/models/: APSchedulerJobs.py  Alert.py  CITrap.py  CasEvac.py  Certificate.py  Chatrooms.py  ChatroomsUids.py  CoT.py  Config.py  DataPackage.py  DeviceProfiles.py  EUD.py  EUDStats.py  Federate.py  FederateToken.py  FederationConnection.py  FederationConnections.py  FederationOutbound.py  FederationServer.py  GeoChat.py  Group.py  GroupEUD.py  GroupEud.py  GroupMission.py  GroupUser.py  Icon.py  Marker.py  MediaMTXPath.py  Meshtastic.py  Mission.py  MissionChange.py  MissionContent.py  MissionContentMission.py  MissionContentMissionChange.py  MissionInvitation.py  MissionLogEntry.py  MissionRole.py  MissionUID.py  Packages.py  Plugins.py  (+15 more)
opentakserver/mumble/: Murmur.ice  mumble_authenticator.py  mumble_ice_app.py
opentakserver/plugins/: BasePlugin.py  Plugin.py  PluginManager.py
opentakserver/proto/: atak.proto  atak_pb2.py  atak_pb2_grpc.py  binarypayload_pb2.py  binarypayload_pb2_grpc.py  contact_pb2.py  contact_pb2_grpc.py  cotevent.proto  cotevent_pb2.py  cotevent_pb2_grpc.py  detail.proto  detail_pb2.py  detail_pb2_grpc.py  fig_pb2.py  fig_pb2_grpc.py  group_pb2.py  group_pb2_grpc.py  message.proto  message_pb2.py  message_pb2_grpc.py  missionannouncement.proto  missionannouncement_pb2.py  missionannouncement_pb2_grpc.py  precisionlocation_pb2.py  precisionlocation_pb2_grpc.py  status_pb2.py  status_pb2_grpc.py  streaminginput.proto  streaminginput_pb2.py  streaminginput_pb2_grpc.py  takcontrol_pb2.py  takcontrol_pb2_grpc.py  takmessage.proto  takmessage_pb2.py  takmessage_pb2_grpc.py  takv_pb2.py  takv_pb2_grpc.py  track_pb2.py  track_pb2_grpc.py
opentakserver/telemetry/: __init__.py  context.py  logs.py  metrics.py  ots.py  traces.py
opentakserver/translations/: messages.pot
tests/: conftest.py  test_health_api.py  test_oidc_api.py  tests.py
(+16 files in other folders)
