[tool.poetry]
name = "OpenTAKServer"
version = "0.0.0"
description = "A server for ATAK, WinTAK, and iTAK"
authors = ["OpenTAKServer <opentakserver@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/brian7704/OpenTAKServer"
documentation = "https://docs.opentakserver.io"

[tool.poetry.dependencies]
adsbxcot = "6.0.4"
androguard = "4.1.3"
aiscot = "7.0.10"
beautifulsoup4 = "4.14.2"
colorlog = "6.10.1"
datetime = "5.5"
# Keep dulwich at 0.24.1 or run into dependency hell with lastversion
dulwich = "0.24.1"
eventlet = "0.40.3"
flask = "3.1.2"
flask-apscheduler = "1.13.1"
flask-cors = "6.0.1"
flask-ldap3-login = "1.0.2"
flask-mailman = "1.1.1"
flask-migrate = "4.1.0"
Flask-Security-Too = {version="5.7.1", extras=["common", "mfa"]}
flask-socketio = "5.5.1"
flask-sqlalchemy = "3.1.1"
gevent = "25.8.1"
kombu = "5.6.0"
lastversion = "*"
lxml = "6.0.2"
meshtastic = "2.7.5"
pika = "1.3.2"
poetry = "2.2.1"
poetry-dynamic-versioning = {version = "1.9.1", extras = ["plugin"]}
protobuf = "6.33.1"
psutil = "7.1.3"
psycopg = "3.2.12"
pyfiglet = "1.0.2"
pygc = "2.0.0"
PyJWT = "2.10.0"
pytak = "7.0.2"
pytest = "8.3.3"
pytest-cov = "6.0.0"
python = ">=3.10, <3.15"
python-ffmpeg = "2.0.12"
python-socketio = {extras = ["client", "websocket_client", "asyncio_client"], version = "5.14.3"}
pyOpenSSL = "25.3.0"
pyotp = "2.9.0"
PyYAML = "6.0.3"
sqlalchemy = "2.0.44"
simplekml = "1.3.6"
sqlalchemy-utils = "0.42.0"
tldextract = "5.3.0"
unishox2-py3 = "1.0.0"
yt-dlp = "*"
# Keep zope-event at 5.1.1, DO NOT UPGRADE
zope-event = "5.1.1"
zope-interface = "8.1.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = false
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.poetry-dynamic-versioning.files."opentakserver/__init__.py"]
persistent-substitution = true
initial-content = """
  # These version placeholders will be replaced later during substitution.
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
opentakserver = "opentakserver.app:start"
eud_handler = "opentakserver.eud_handler.eud_handler:main"
cot_parser = "opentakserver.cot_parser.cot_parser:main"